--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "ezekit",
   "version": "1.0.0",
   "description": "EZE / SvelteKit components",
-  "main": "index.js",
+  "svelte": "index.js",
+  "module": "dist/index.mjs",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
