--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "svelte": "index.js",
   "module": "index.mjs",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
